# lib

./: .envrc  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
docs/: ARCHITECTURE.md
docs/.readme_assets/: description.md  other.md  usage.md
rust/: Cargo.toml  README.md
rust/classes/: Cargo.toml
rust/classes/src/: accordion.rs  alert.rs  alert_dialog.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  button_group.rs  calendar.rs  card.rs  carousel.rs  chart.rs  command.rs  container.rs  context_menu.rs  dialog.rs  drawer.rs  dropdown_menu.rs  empty.rs  field.rs  form.rs  hover_card.rs  input.rs  input_group.rs  input_otp.rs  item.rs  kbd.rs  label.rs  lib.rs  menubar.rs  navigation_menu.rs  popover.rs  progress.rs  radio_group.rs  resizable.rs  scroll_area.rs  separator.rs  sheet.rs  sidebar.rs  size.rs  (+8 more)
rust/examples/: all_primitives.rs
rust/src/: lib.rs  mfe.rs
rust/src/analytics/: GUIDE.md  README.md  client.rs  event.rs  mod.rs  test_util.rs  ui.rs
rust/src/architecture/: entity.rs  event.rs  gateway.rs  identifier.rs  repository.rs  specification.rs  unit_of_work.rs
rust/src/error_monitoring/: GUIDE.md  README.md  browser.rs  mod.rs  native.rs  wire.rs
rust/src/experiments/: GUIDE.md  README.md  config.rs  cookie.rs  mod.rs  test_util.rs  ui.rs
rust/src/otel/: mod.rs  native.rs
rust/src/settings/: GUIDE.md  README.md  macros.rs  mod.rs  presets.rs  tests.rs  value.rs
rust/src/uikit/: accordion.rs  alert.rs  alert_dialog.rs  aspect_ratio.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  button_group.rs  calendar.rs  card.rs  carousel.rs  chart.rs  checkbox.rs  collapsible.rs  command.rs  container.rs  context_menu.rs  dialog.rs  drawer.rs  dropdown_menu.rs  empty.rs  field.rs  fonts.rs  footer.rs  form.rs  header.rs  hover_card.rs  info_tip.rs  input.rs  input_group.rs  input_otp.rs  item.rs  kbd.rs  label.rs  logo.rs  menubar.rs  mod.rs  navigation_menu.rs  pagination.rs  (+27 more)
rust/tests/: architecture.rs  gallery.rs  slider_reference.rs
rust/tests/support/: gallery.rs
rust/tests/visual/: .gitignore  gallery.spec.ts  package-lock.json  package.json  playwright.config.ts
rust/uikit-viewer/: .gitignore  Cargo.toml  Dioxus.toml  README.md  input.css  package-lock.json  package.json
rust/uikit-viewer/src/: main.rs  viewer.rs
scripts/: publish.rs
src/architecture/: entity.rs  event.rs  gateway.rs  identifier.rs  mod.rs  specification.rs
ts/: README.md
ts/analytics/: GUIDE.md  README.md  package-lock.json  package.json  tsconfig.core.json  tsconfig.json  tsup.config.ts  vitest.config.ts  vitest.workspace.ts
ts/analytics/src/: index.ts
ts/analytics/src/next/: client.tsx  index.ts
ts/analytics/src/node/: index.ts
ts/analytics/src/react/: context.ts  index.ts
ts/analytics/test/: core.node.test.ts  next-client.react.test.tsx  next.node.test.ts  node.node.test.ts  react.react.test.tsx  setup.ts
ts/architecture/: README.md  package-lock.json  package.json  tsconfig.json
ts/architecture/src/: entity.ts  event.ts  gateway.ts  identifier.ts  index.ts  match.ts  repository.ts  specification.ts  unit-of-work.ts
ts/architecture/test/: architecture.test.ts  event.test.ts  identifier.test.ts  specification.test.ts
ts/error-monitoring/: .gitignore  GUIDE.md  README.md  package-lock.json  package.json  tsup.config.ts  vitest.config.ts  vitest.workspace.ts
ts/error-monitoring/src/: index.ts
ts/error-monitoring/src/next/: index.ts
ts/error-monitoring/src/node/: index.ts
ts/error-monitoring/src/react/: index.ts
ts/error-monitoring/test/: error-boundary.react.test.tsx  init.node.test.ts  register.node.test.ts  setup.react.ts  sink.node.test.ts
ts/experiments/: GUIDE.md  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  tsup.react.config.ts  vitest.config.ts  vitest.workspace.ts
ts/experiments/src/: index.ts
ts/experiments/src/next/: index.ts
ts/experiments/src/react/: index.tsx
ts/experiments/test/: core.node.test.ts  next.node.test.ts  react.react.test.tsx  setup.react.ts
ts/settings/: GUIDE.md  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
ts/settings/src/: create-settings.ts  error.ts  index.ts  presets.ts  validators.ts
ts/settings/test/: contract.node.test.ts  core.node.test.ts  presets.node.test.ts
ts/uikit/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
ts/uikit/example/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ts/uikit/example/src/: App.tsx  app.css
ts/uikit/src/: index.ts
ts/uikit/src/components/: accordion.tsx  alert-dialog.tsx  alert.tsx  aspect-ratio.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button-group.tsx  button.tsx  calendar.tsx  card.tsx  carousel.tsx  chart.tsx  checkbox.tsx  collapsible.tsx  command.tsx  container.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  empty.tsx  field.tsx  footer.tsx  form.tsx  header.tsx  hover-card.tsx  info-tip.tsx  input-group.tsx  input-otp.tsx  input.tsx  item.tsx  kbd.tsx  label.tsx  logo.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  progress.tsx  (+20 more)
ts/uikit/src/lib/: cn.ts
ts/uikit/src/primitives/: focus-scope.tsx  (+9 more)
ts/uikit/styles/: tokens.css
ts/uikit/test/: accordion.test.tsx  alert-dialog.test.tsx  alert.test.tsx  aspect-ratio.test.tsx  avatar.test.tsx  badge.test.tsx  breadcrumb.test.tsx  button-group.test.tsx  button.test.tsx  calendar.test.tsx  card.test.tsx  carousel.test.tsx  chart.test.tsx  checkbox.test.tsx  collapsible.test.tsx  command.test.tsx  container.test.tsx  context-menu.test.tsx  dialog.test.tsx  drawer.test.tsx  dropdown-menu.test.tsx  empty.test.tsx  field.test.tsx  footer.test.tsx  form.test.tsx  foundation.test.ts  header.test.tsx  hover-card.test.tsx  info-tip.test.tsx  input-group.test.tsx  input-otp.test.tsx  input.test.tsx  item.test.tsx  kbd.test.tsx  label.test.tsx  logo.test.tsx  menubar.test.tsx  navigation-menu.test.tsx  pagination.test.tsx  popover.test.tsx  (+24 more)
