# Thin virtual workspace. The crate's sources live in `rust/` (mirroring `ts/`),
# but the shared CI and tooling drive cargo from the repo root, so the workspace
# anchors the crate here. See docs/ARCHITECTURE.md.
[workspace]
resolver = "3"
members = ["rust"]

[workspace.lints.rust]
unused_features = "allow"

[workspace.dependencies]
async-trait = "0.1.89"
dioxus = { version = "0.7", default-features = false }
dioxus-ssr = "0.7"
jiff = "0.2"
serde = "1"
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
tailwind_fuse = "0.3"
tokio = "1"
uuid = "1"
ev_lib = { path = "rust" }
