# Thin virtual workspace. The crate's sources live in `rust/` (mirroring `ts/`),
# but the shared CI and tooling drive cargo from the repo root, so the workspace
# anchors the crate here. See docs/ARCHITECTURE.md.
[workspace]
resolver = "3"
members = ["rust", "rust/classes", "rust/gen", "rust/uikit-viewer"]

[workspace.lints.rust]
unused_features = "allow"

[workspace.dependencies]
async-trait = "0.1.89"
axum = "0.8"
derive_more = { version = "2.1", features = ["display"] }
dioxus = { version = "0.7", default-features = false }
dioxus-liveview = "0.7"
dioxus-ssr = "0.7"
ev_lib = { path = "rust", version = "0.3.7" }
ev_lib_classes = { path = "rust/classes", version = "0.1.2" }
jiff = "0.2"
serde = "1"
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
tailwind_fuse = "0.3"
tokio = "1"
uuid = "1"

# smaller target/: trim debuginfo (deps need none), keep line tables for backtraces
[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false
