[package]
name = "ev"
version = "0.1.0"
edition = "2024"
description = "EV-invest shared Rust libraries, one per feature"
license = "BlueOak-1.0.0"
repository = "https://github.com/EV-invest/lib"
publish = false

[features]
# Each library is opt-in. No default features: a consumer enables only what it uses.
architecture = ["dep:async-trait", "dep:serde", "dep:uuid", "dep:jiff"]

# Dep-light Dioxus UI kit (mirrors `@ev/uikit`). Renderer-agnostic RSX components;
# pulls only Dioxus + tailwind_fuse (the `cn!` engine). Unlike the kernel this
# library carries runtime deps — a UI kit can't be zero-dep; see AGENTS.md.
uikit = ["dep:dioxus", "dep:tailwind_fuse"]

# One opt-in switch that layers wasm/browser backends onto whatever other
# features are enabled — each feature contributes its own wasm needs here with
# the `pkg?/feature` syntax (no-op when that feature is off). Enable it
# per-target on the consumer side (`[target.'cfg(target_arch = "wasm32")']`),
# never globally, so native builds don't link browser backends.
wasm = ["uuid?/js", "dioxus?/web"]

[dependencies]
async-trait = { version = "0.1.89", optional = true }
dioxus = { version = "0.7", optional = true, default-features = false, features = ["macro", "html", "signals", "hooks"] }
jiff = { version = "0.2", features = ["serde"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
tailwind_fuse = { version = "0.3", optional = true }
uuid = { version = "1", features = ["serde", "v4"], optional = true }

[dev-dependencies]
async-trait = "0.1.89"
dioxus = { version = "0.7", features = ["signals", "hooks"] }
dioxus-ssr = "0.7"
jiff = { version = "0.2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
uuid = { version = "1", features = ["serde", "v4"] }
