[package]
name = "ev_lib_classes"
version = "0.1.3"
edition = "2024"
description = "Pure styling data (Tailwind class tables) shared by the Dioxus uikit and the TS codegen — no Dioxus."
license = "BlueOak-1.0.0"
repository = "https://github.com/EV-invest/lib"

[dependencies]
strum.workspace = true
tailwind_fuse = { workspace = true, features = ["variant"] }
